# kombat-backend

./: .env.example  .gitignore  Anchor.toml  Cargo.toml  DEPLOYMENT.md  Dockerfile  FRONTEND_INTEGRATION.md  GCP_DEPLOYMENT.md  README.md  docker-compose.yml  package-lock.json  package.json
app/: Cargo.toml
app/src/: main.rs  models.rs  state.rs
app/src/handlers/: admin.rs  agent.rs  auth.rs  delegation.rs  market.rs  mod.rs  notifications.rs  notify.rs  organizer.rs  payment.rs  ramp.rs  sui.rs  tournament.rs  transak.rs  upload.rs  user.rs  wager.rs  walrus.rs  webhook.rs
app/src/services/: agent_pipeline.rs  auth.rs  auth_tests.rs  auth_unit_tests.rs  db.rs  delegation.rs  delegation_tests.rs  dynamic.rs  grid.rs  indexer.rs  mod.rs  pandascore.rs  poller.rs  push.rs  ramp.rs  redis.rs  solana.rs  sui.rs  sui_tx.rs  transak.rs  upload.rs  walrus.rs
docs/: AGENT_OUTCOME_FE_GUIDE.md  API.md  AUTHENTICATION.md  MOBILE_API_REFERENCE.md  TOURNAMENT_PRD.md
migrations/: 001_create_wagers.sql  002_create_users.sql  003_add_user_email.sql  003_create_notifications.sql  004_create_nonces.sql  004_create_push_tokens.sql  005_add_initiator_option.sql  005_create_notification_settings.sql  006_add_declared_winners.sql  007_create_dispute_submissions.sql  008_rename_stake_lamports_to_usdc.sql  009_create_matches.sql  010_create_match_opponents.sql  011_create_pool_stakes.sql  012_add_match_to_wagers.sql  013_create_idempotency_keys.sql  014_widen_wallet_addresses_for_sui.sql  015_create_payment_intents.sql  016_create_receipt_market_listings.sql  017_create_organizer_tournaments_and_outcomes.sql  018_create_organizer_profiles.sql  019_create_walrus_artifacts_and_agent_runs.sql  020_agent_runs_add_agent_id.sql  021_wager_resolution_visibility.sql  022_users_email.sql  023_optimize_notifications_lookup.sql  024_default_matches_source_grid.sql
programs/wager/: Cargo.toml
programs/wager/src/: Cargo.toml  create_wager.rs  dispute.rs  errors.rs  events.rs  initialize.rs  lib.rs  resolve_wager.rs  state.rs
scripts/: init_protocol.js  migrate_config.js
sui/: Move.toml  Published.toml  README.md
sui-wager/: Move.toml  Published.toml
sui/sources/: tournament_staking.move  wager.move
