[package]
name = "wager-api"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7.4", features = ["ws"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }
axum-extra = { version = "0.9", features = ["multipart"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = ">=1.0.228", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
anyhow = "1.0"
uuid = { version = "1.7", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Database — Postgres only
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls", "uuid", "chrono", "macros", "rust_decimal"] }

# Decimal type for precise financial calculations
rust_decimal = { version = "1.33", features = ["serde"] }

prometheus = "0.14"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
jsonwebtoken = "8"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
