[package]
name    = "wager"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name       = "wager"

[features]
default        = []
cpi            = ["no-entrypoint"]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
idl-build      = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug   = []
custom-heap    = []
custom-panic   = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl  = { workspace = true }
borsh       = { workspace = true }

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk          = { workspace = true }